# MalifiScan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trufflehogignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  STANDARDS.md  cli.py  config.demo.yaml  config.local.yaml.example  config.tests.yaml  config.yaml  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: copilot-instructions.md
.github/chatmodes/: architect_pre_commit_review.chatmode.md
.github/workflows/: docker-release.yml  pypi-release.yml  tests.yml  unit-tests.yml
examples/: README.md  config.shai-hulud-2.0.yaml
src/: main.py
src/config/: __init__.py  config_loader.py  config_loader_enhanced_test.py  config_test.py  exceptions.py
src/core/: wildcard_compressor.py
src/core/cache/: __init__.py  package_cache.py
src/core/entities/: __init__.py  entities_test.py  malicious_package.py  notification_event.py  registry_package_match.py  scan_result.py
src/core/interfaces/: __init__.py  cache_service.py  notification_service.py  notification_service_test.py  packages_feed.py  packages_registry_service.py  packages_registry_service_test.py  storage_service.py  storage_service_test.py
src/core/usecases/: __init__.py  configuration_management.py  configuration_management_test.py  data_management.py  data_management_test.py  feed_management.py  feed_management_test.py  health_management.py  health_management_test.py  notification_testing.py  package_management.py  package_management_test.py  proactive_security.py  proactive_security_test.py  registry_management.py  registry_management_test.py  scan_results.py  scan_results_test.py  security_analysis.py  security_analysis_test.py  (+4 more)
src/factories/: __init__.py  service_factory.py  service_factory_test.py
src/providers/: exceptions.py
tests/: __init__.py
tests/integration/: test_cli_integration.py  test_database_integration.py  test_factory_integration.py  test_jfrog_integration.py  test_jfrog_repository_discovery.py  test_multi_ecosystem_integration.py  test_notifications_integration.py  test_osv_integration.py  test_reports_functionality.py  test_scanner_integration.py
tests/unit/: test_entities.py  test_version_matcher.py
(+54 files in other folders)
