[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malifiscan"
version = "0.13"
description = "A security tool that detects malicious packages from external vulnerability feeds and searches for them in your package registries or artifact repositories."
authors = [
    {name = "Security Team", email = "security@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.9.1",
    "aiosqlite==0.21.0",
    "google-cloud-storage==3.5.0",
    "protobuf==6.32.1",
    "pydantic==1.10.12",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "redis==7.0.1",
    "rich==14.1.0",
    "sqlalchemy==2.0.44",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=4.3.0",
]

[project.scripts]
malifiscan = "cli:main"

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=4.3.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning"
]
